<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGray"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/select_user_type"
            android:gravity="center"
            android:textColor="@color/qhy_blue"
            android:background="@color/white"
            />


        <TextView
            android:id="@+id/tv_student"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/student"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:background="@color/white"
            android:layout_marginTop="3dp"
            />

        <TextView
            android:id="@+id/tv_enterprise"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/enterprise"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            />
        <TextView

            android:id="@+id/tv_housing_estate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/housing_estate"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            />
        <TextView
            android:id="@+id/tv_other"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/other"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            />



        <TextView
            android:id="@+id/tv_photo_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/tx_cancel"
            android:gravity="center"
            android:textColor="@color/text_grays"
            android:background="@color/white"
            android:layout_marginTop="3dp"
            android:textStyle="bold"
            />



    </LinearLayout>

</LinearLayout>