<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/img_bg"
android:orientation="vertical"
tools:context="org.huaanwater.work.ui.activity.AnXinBindActivity">


<!--title-->

<include
    android:id="@+id/include_title_login"
    layout="@layout/title_bar_has_left"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />



<LinearLayout
    android:id="@+id/ll_center"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_below="@id/include_title_login"
    android:layout_marginTop="30dp"
    >
    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_anxin_normal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anxin_account_bind"
        android:textColor="@color/qhy_blue"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        />


</LinearLayout>





<LinearLayout
    android:id="@+id/ll_top_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/ll_center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:layout_marginTop="20dp"
    >


    <RelativeLayout
        android:id="@+id/ll_name_android_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <LinearLayout
            android:id="@+id/layout_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_reg_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_anxin_account_login"
                    android:paddingLeft="10dp"
                    android:textColor="@color/text_login"
                    android:textColorHint="@color/text_grays"
                    android:textSize="15sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/layout_account"
                    android:background="@color/blue_normal_one" />

            </LinearLayout>


            <ImageView
                android:id="@+id/iv_clear_account"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:src="@drawable/img_clear" />

        </LinearLayout>


        <!--密码-->
        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/layout_account"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_reg_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="@string/pass_digest"
                    android:hint="@string/enter_password_login"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:textColor="@color/text_login"
                    android:textColorHint="@color/text_grays"
                    android:textSize="15sp"

                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/blue_normal_one"

                    />

            </LinearLayout>


            <ImageView
                android:id="@+id/iv_clear_pass"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:src="@drawable/img_clear" />

        </LinearLayout>




    </RelativeLayout>


</LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="30dp"
    android:gravity="center"
    android:orientation="horizontal">


    <RelativeLayout
        android:id="@+id/rl_reg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/iv_reg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@drawable/selector_main_bottom_item" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="27dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="绑定"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>


</RelativeLayout>




