<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/img_bg"
android:orientation="vertical"
tools:context="org.huaanwater.work.ui.activity.ModifyPassActivity">


<!--title-->

<include
    android:id="@+id/include_title_modift_pass"
    layout="@layout/title_bar_has_left"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />





<LinearLayout
    android:id="@+id/ll_down"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/include_title_modift_pass"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_name_android_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/layout_account"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_user_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="@string/pass_digest"
                    android:hint="@string/enter_password_login"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:textColor="@color/text_login"
                    android:textColorHint="@color/text_grays"
                    android:textSize="15sp"

                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/qhy_blue"

                    />

            </LinearLayout>


            <ImageView
                android:id="@+id/iv_pass_clear"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:src="@drawable/img_clear" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/layout_account"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_user_pass_again"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="@string/pass_digest"
                    android:hint="@string/enter_password_login_again"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:textColor="@color/text_login"
                    android:textColorHint="@color/text_grays"
                    android:textSize="15sp"

                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/qhy_blue"

                    />

            </LinearLayout>


            <ImageView
                android:id="@+id/iv_pass_again_clear"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:src="@drawable/img_clear" />

        </LinearLayout>



    </LinearLayout>





    <RelativeLayout
        android:id="@+id/rl_submit"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/iv_reg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@drawable/selector_main_bottom_item" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="27dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="确认"
            android:textColor="@color/white" />
    </RelativeLayout>




</LinearLayout>


</RelativeLayout>





